--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@rainbow-me/rainbowkit": "^2.1.6",
     "@tanstack/react-query": "^5.51.23",
     "@wagmi/core": "^2.13.5",
+    "axios": "^1.7.9",
     "dayjs": "^1.11.13",
     "ethers": "5",
     "framer-motion": "^11.14.4",
@@ -22,6 +23,7 @@
     "react": "^18.3.1",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-i18next": "^15.1.0",
     "react-icons": "^5.3.0",
     "react-responsive-carousel": "^3.2.23",
