--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@giscus/react": "^3.0.0",
     "@rainbow-me/rainbowkit": "^2.1.6",
     "@tanstack/react-query": "^5.51.23",
     "@wagmi/core": "^2.13.5",
     "axios": "^1.7.9",
+    "commentbox.io": "^2.1.0",
     "dayjs": "^1.11.13",
-    "ethers": "5",
+    "ethers": "^6.13.4",
     "framer-motion": "^11.14.4",
     "i18next": "^23.16.4",
     "i18next-http-backend": "^2.6.2",
