--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "react-responsive-carousel": "^3.2.23",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
+    "stream-chat": "^9.14.0",
+    "stream-chat-react": "^13.3.0",
     "viem": "^2.21.7",
     "wagmi": "^2.12.11"
   },
